[gd_scene load_steps=14 format=3 uid="uid://7y4yx3cpyo2k"]

[ext_resource type="Script" uid="uid://646vihvjcd5h" path="res://scenes/enemies/drone.gd" id="1_1uuiv"]
[ext_resource type="Texture2D" uid="uid://drjrgwy750ota" path="res://resources/graphics/enemies/drone.png" id="1_l6itc"]
[ext_resource type="Shader" uid="uid://kpnep0nql7kr" path="res://scenes/enemies/scout.gdshader" id="2_5x8hu"]
[ext_resource type="Texture2D" uid="uid://u4w68j5krbia" path="res://resources/graphics/explosions/explosion_3.png" id="3_hkvq6"]
[ext_resource type="AudioStream" uid="uid://ds3cc06ec3kp5" path="res://resources/audio/look.wav" id="5_r5id7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7clvs"]
shader = ExtResource("2_5x8hu")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/progress = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_wpkse"]
radius = 72.4707

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmimt"]
size = Vector2(80, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2cg4r"]
size = Vector2(78, 42)

[sub_resource type="CircleShape2D" id="CircleShape2D_asd6p"]
radius = 700.731

[sub_resource type="Animation" id="Animation_xx6vf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosions:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_23pmd"]
resource_name = "explosions"
length = 2.0
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosions:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65, 1.7, 1.75, 1.8, 1.85, 1.9, 1.95),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosions:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drone:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.45),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.65, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"find_hit"
}, {
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rcm32"]
_data = {
&"RESET": SubResource("Animation_xx6vf"),
&"explosions": SubResource("Animation_23pmd")
}

[node name="Drone" type="CharacterBody2D" groups=["Enemies", "Entity"]]
position = Vector2(-1, 0)
collision_layer = 2
collision_mask = 15
script = ExtResource("1_1uuiv")

[node name="Drone" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_7clvs")
rotation = 1.5708
texture = ExtResource("1_l6itc")

[node name="Body" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CircleShape2D_wpkse")

[node name="LeftWing" type="CollisionShape2D" parent="."]
position = Vector2(8, -108)
rotation = 1.5708
shape = SubResource("RectangleShape2D_wmimt")

[node name="RightWing" type="CollisionShape2D" parent="."]
position = Vector2(17, 107)
rotation = 1.5708
shape = SubResource("RectangleShape2D_2cg4r")

[node name="NoticeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_asd6p")

[node name="Node" type="Node" parent="."]

[node name="DmgTimer" type="Timer" parent="Node"]
wait_time = 0.1

[node name="Explosions" type="Sprite2D" parent="."]
texture = ExtResource("3_hkvq6")
hframes = 8
vframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rcm32")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_r5id7")

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="timeout" from="Node/DmgTimer" to="." method="_on_dmg_timer_timeout"]
